# slurp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  flake.nix
.github/workflows/: build-on-tag.yml
nix/: devshell.nix  formatter.nix
src/: args.rs  log.rs  main.rs
